message board card width fix

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -3,6 +3,7 @@
     font-family: 'Graphik-Regular-App';
     border-radius: 10px;
     border: 1px;
+    width: 100%;
 
 }
 
@@ -56,3 +57,4 @@
 
 
 }
+
