--- a/components/Forms/EditableRichText.css
+++ b/components/Forms/EditableRichText.css
@@ -55,6 +55,8 @@
     font-family: 'Graphik-Regular-App'!important;
     font-size: 16px;
     line-height: 26;
+}
 
-
+#comment-div {
+    height: 50px;
 }
