--- a/components/Forms/react-draft-wysiwyg.css
+++ b/components/Forms/react-draft-wysiwyg.css
@@ -986,7 +986,7 @@
   box-sizing: border-box;
   font-family: 'Graphik-Regular-App'!important;
   font-size: 16px;
-  line-height: 26;
+  line-height: 26px;
 }
 
 .rdw-editor-toolbar {
