--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -32,6 +32,7 @@
     width: 95%;
     left: 0px;
     top: 0px;
+    height: 205px;
 }
 
 .customToolbar {
@@ -56,7 +57,6 @@
 
 .customEditorSendmessage {
     position: relative;
-    height: unset;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 0px;
@@ -66,7 +66,7 @@
     border-color: #eeeeee;
     background-color: #ffffff;
     border-radius: 0 0 10px 10px;
-    max-height: 200px;
+    max-height: 145px;
 }
 
 .customEmojiModal {
