--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -15,9 +15,10 @@
     border: 1px;
     margin-left: 10px;
     height: unset;
-    width: 92.5%;
+    width: 90%;
     left: 50px;
     top: -50px;
+    margin-left: 30px;
 }
 
 .customWrapperSendmessageMini {
@@ -66,7 +67,8 @@
     border-color: #eeeeee;
     background-color: #ffffff;
     border-radius: 0 0 10px 10px;
-    max-height: 145px;
+    min-height: 200px;
+    max-height: 500px;
 }
 
 .customEmojiModal {
