--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -17,8 +17,10 @@
     height: unset;
     width: 90%;
     left: 50px;
-    top: -50px;
+    top: 0px;
     margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .customWrapperSendmessageMini {
