--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -17,10 +17,11 @@
     height: unset;
     width: 90%;
     left: 50px;
-    top: 0px;
+    /* top: 0px; */
     margin-left: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    /* margin-top: 30px; */
+    /* margin-bottom: 30px; */
+    bottom: 50px;
 }
 
 .customWrapperSendmessageMini {
