courseDetail - assignment messageboard fix - desktop

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -16,9 +16,9 @@
     margin-left: 10px;
     height: unset;
     width: 90%;
-    left: 55px;
+    left: 50px;
     /* top: 0px; */
-    margin-left: 35px;
+    margin-left: 30px;
     /* margin-top: 30px; */
     /* margin-bottom: 30px; */
     bottom: 50px;
@@ -37,6 +37,23 @@
     left: 0px;
     top: 0px;
     height: 205px;
+}
+
+.customWrapperSendmessageCourse {
+    position: relative;
+    background-color: #eeeeee;
+    font-family: 'Graphik-Regular-App';
+    border-radius: 10px;
+    border: 1px;
+    margin-left: 10px;
+    height: unset;
+    width: 85%;
+    left: 50px;
+    /* top: 0px; */
+    margin-left: 30px;
+    /* margin-top: 30px; */
+    /* margin-bottom: 30px; */
+    bottom: 50px;
 }
 
 .customToolbar {
