courseDetail - assignment right card fix - ipad

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -111,3 +111,9 @@
         width: 88%;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .customWrapperSendmessageCourse {
+        width: 81%;
+    }
+}
