--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -116,4 +116,8 @@
     .customWrapperSendmessageCourse {
         width: 81%;
     }
+
+    .customWrapperSendmessage {
+        width: 79%;
+    }
 }
