--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -16,11 +16,15 @@
   height: unset;
   width: 90%;
   left: 50px;
+  /* top: 0px; */
   margin-left: 30px;
+  /* margin-top: 30px; */
+  /* margin-bottom: 30px; */
   bottom: 50px;
 }
 
 .customWrapperSendmessageMini {
+  position: relative;
   background-color: #f9fafc;
   font-family: "Graphik-Regular-App";
   border-radius: 10px;
@@ -61,19 +65,18 @@
   padding-right: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
-  border-radius: 10px;
-  max-height: 100px;
 }
 
 .customEditorSendmessage {
+  position: relative;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
   border: 2px;
   border-style: solid;
-  border-color: #f9fafc;
-  background-color: #f9fafc;
+  border-color: #eeeeee;
+  background-color: #ffffff;
 }
 
 .no-toolbar {
