add CRM message board to admin panel in profiles

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -69,6 +69,7 @@
 
 .customEditorSendmessage {
   position: relative;
+  font-family: "Graphik-Regular-App";
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 0px;
