courses - mini message board - removed grey background from post container

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -25,7 +25,7 @@
 
 .customWrapperSendmessageMini {
   position: relative;
-  background-color: #f9fafc;
+  /* background-color: #f9fafc; */
   font-family: "Graphik-Regular-App";
   border-radius: 10px;
   border: 1px;
