--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -16,10 +16,10 @@
   height: unset;
   width: 90%;
   left: 50px;
-  /* top: 0px; */
+  top: 0px;
   margin-left: 30px;
-  /* margin-top: 30px; */
-  /* margin-bottom: 30px; */
+  margin-top: 30px;
+  margin-bottom: 30px;
   bottom: 50px;
 }
 
