courses - header fix, assignments comment box fix

--- a/components/Forms/react-draft-wysiwyg.css
+++ b/components/Forms/react-draft-wysiwyg.css
@@ -978,7 +978,7 @@
 }
 
 .rdw-editor-main {
-  height: auto;
+  /* height: auto; */
   /* max-height: 10vw; */
   overflow: auto;
   box-sizing: border-box;
