--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -41,9 +41,9 @@
   border-radius: 10px;
   border: 1px;
   margin-left: 10px;
-  height: unset;
-  width: 85%;
-  left: 50px;
+  height: 300px;
+  /* width: 85%;
+  left: 50px; */
   margin-left: 30px;
   bottom: 50px;
 }
