--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -31,7 +31,7 @@
   border: 1px;
   padding: 5px 12px 5px 0;
   margin-bottom: 12px;
-  height: auto;
+  height: 90px;
 }
 
 .customWrapperSendmessageCourse {
