message board button fix

--- a/components/MessageBoard/react-draft-wysiwyg.css
+++ b/components/MessageBoard/react-draft-wysiwyg.css
@@ -861,7 +861,7 @@
   background: white;
   flex-wrap: wrap;
   font-size: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 1px !important;
   user-select: none;
 }
 .public-DraftStyleDefault-block {
