--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -47,6 +47,7 @@
   margin-left: 30px;
   /* bottom: 50px; */
   top: 2rem;
+  margin-bottom: 6rem;
 }
 
 .customToolbar {
@@ -55,7 +56,7 @@
   border-radius: 10px;
   border: 1px;
   height: unset;
-  width: 90%;
+  /* width: 90%; */
   padding-top: 10px;
   padding-bottom: 2px;
 }
@@ -109,7 +110,8 @@
 
 @media screen and (max-width: 768px) {
   .customWrapperSendmessageCourse {
-    width: 81%;
+    width: 100%;
+    margin-left: 0;
   }
 
   .customWrapperSendmessage {
